<?xml version="1.0"?>
<package format="2">
  <name>zed_calib</name>
  <version>2.6.0</version>
  <description>zed_calib is a ROS node used to easily calculate the parameters to configure a robot using a ZED camera
  </description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>  
  
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>rqt_multiplot</exec_depend>
</package>
